# constitutional-alignment-studio

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  stories_and_relation_to_backbone.txt
src/: __init__.py  llm_client.py  models.py  prompt_engine.py  repository.py  revision_chain.py  tracing.py  utils.py  validator.py
tests/: __init__.py  conftest.py  install_dependencies.sh  test_app.py  verify_setup.py
ui/: __init__.py  app.py  builder_view.py  components.py  tester_view.py
